--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "co": "^4.6.0",
     "html-minifier": "^3.5.3",
+    "ip": "^1.1.5",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-compose": "^4.0.0",
     "koa-router": "^7.2.1",
+    "log4js": "^2.3.3",
     "mime": "^1.3.6",
     "mz": "^2.6.0",
     "node-uuid": "^1.4.8",
